--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p>food trucks</p>
       </div>
       <div class="milk"></div>
-      <img src="" alt="bio-milk">
+      <img src="alt="bio-milk">
       <p>
         Lorem ipsum dolor sit amet consectetur adipiscing elit torquent,
         ullamcorper mus egestas donec inceptos orci vitae cubilia, penatibus
@@ -54,10 +54,10 @@
       </p>
       <span class="icon-arrow-right2"></span>
       <div class="cone">
-        <img src="" alt="cone-flavors">
+        <img src=" alt="cone-flavors">
       </div>
       <div class="tasty">
-        <img src="" alt="so-tasty">
+        <img src="alt="so-tasty">
       </div>
     </header>
     <section class="products">
@@ -108,18 +108,26 @@
             Curabitur lacinia enim at ex blandit, vel pellentesque odio
             elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum
             euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras
-            massa nibh, tincidu
-            <br />
-            <br />
+            massa nibh, tincidu</p>
+
+            <p class="paragraph__two">
             Aliquam erat volutpat. Aenean accumsan.
           </p>
-          <button type="button">Read more</button>
+          <button class="" type="button">
+            <div class="content_button">
+              <span>Read more</span>
+              <svg class="">
+                <use xlink:href =""></use>
+              </svg>
+            </div>
+          </button>
         </div>
       </div>
 
       <div class="second-main">
         <div class="second-main__elements">
-          <svg></svg>
+          <svg class="second-main_svg" width="50" height="50"><use xlink:href="./images/icons.svg#icon-Milk
+            "></use></svg>
           <h2 class="second-main__title">721</h2>
           <p class="second-main__text">
             Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
@@ -127,15 +135,19 @@
         </div>
 
         <div class="second-main__elements">
-          <svg></svg>
+          <svg class="second-main_svg" width="49" height="50"><use xlink:href="./images/icons.svg#icon-Apples
+            "></use></svg>
           <h2>16kg</h2>
-          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+          <p class="second-main__text">
+            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
         </div>
 
         <div class="second-main__elements">
-          <svg></svg>
+          <svg class="second-main_svg" width="44" height="50"><use xlink:href="./images/icons.svg#icon-Heart
+            "></use></svg>
           <h2>84</h2>
-          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+          <p class="second-main__text">
+            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
         </div>
       </div>
     </section>
@@ -145,27 +157,27 @@
         <div>
           <img src="images/home-pic5.png" alt="glass of ice cream">
         </div>
-        <div>
+        <div class="colash_2">
           <img src="images/home-pic4.png" alt="ice crean cone">
           <img src="images/home-pic6.png" alt="palette">
         </div>
 
-        <div>
+        <div class="colash_3">
           <img src="images/home-pic1.png" alt="waffle cone">
           <img src="images/home-pic7.png" alt="enjoying the ice cream">
         </div>
 
-        <div>
+        <div class="colash_4">
           <img src="images/home-pic9.png" alt="fruit salad">
           <img src="images/home-pic8.png" alt="ice cream spark">
         </div>
 
-        <div>
+        <div class="colash_5">
           <img src="images/home-pic10.png" alt="pet ice cream">
           <img src="images/home-pic12.png" alt="milk shake">
         </div>
 
-        <div>
+        <div class="colash_6">
           <img src="images/home-pic11.png" alt="milkshake with ice cream">
         </div>
       </div>
@@ -174,16 +186,22 @@
         <img
           class="testimony__image"
           src="images/testimonials1.png"
-          alt="client's profile"
-        />
+          alt="client's profile">
         <div class="testimony__background">
+          <svg class="Quotation" width="50" height="50"><use xlink:href="./images/icons.svg#icon-Quotation
+            "></use></svg>
           <p class="testimony__paragraph">
+
             Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+            Aliquam sem. In hendrerit <br> nulla quam nunc, accumsan congue. Lorem
             ipsum primis in nibh vel risus.
           </p>
         </div>
+        <svg class="vignettes" width="32" height="4"><use xlink:href="./images/icons.svg#icon-Red-points
+          "></use></svg>
         <h3 class="testimony__name">Emily, Los Angeles</h3>
+        <svg class="vignettes" width="72" height="12"><use xlink:href="./images/icons.svg#icon-house-ellipses
+          "></use></svg>
       </div>
     </section>
   </body>
