--- a/index.html
+++ b/index.html
@@ -16,58 +16,61 @@
 <!-- Inicio sescciones equipo 1 -->
   <header>
     <div class="container">
-      <div class="home-container">
-        <svg class="Logo" width="199" height="50">
-          <use xlink:href="./images/icons.svg#icon-Logo"></use>
-        </svg>
-        <nav>
-          <ul>
-            <li><a class="nav-home" href="#">Home</a></li>
-            <li><a class="nav-home" href="#">About us</a></li>
-            <li><a class="nav-home" href="#">How it's made?</a></li>
-            <li><a class="nav-home" href="#">Our products</a></li>
-            <li><a class="nav-home" href="#">Contact</a></li>
-          </ul>
-        </nav>
-        <div class="nav-button">
-          <button type="button">Buy now ></button>
-        </div>
-      </div>
-      <div class="hero-left">
-        <h1 class="ice-cream">
-          ICE CREAM MADE WITH <span>PASSION</span>
-        </h1>
-        <div class="hero-button">
-          <button type="button">Products</button><button type="button">How it's made?</button>
-        </div>
-        <div class="milk">
-          <img src="images/slider-pic5.png" alt="bio-milk" />
-          <div class="milk-text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-            <!--<img src="images/arrow-right.png" alt="arrow" width="40">-->
+      <div class="hero">
+        <div class="home-container">
+          <svg class="Logo" width="199" height="50">
+            <use xlink:href="./images/icons.svg#icon-Logo"></use>
+          </svg>
+          <nav>
+            <ul>
+              <li><a class="nav-home" href="#">Home</a></li>
+              <li><a class="nav-home" href="#">About us</a></li>
+              <li><a class="nav-home" href="#">How it's made?</a></li>
+              <li><a class="nav-home" href="#">Our products</a></li>
+              <li><a class="nav-home" href="#">Contact</a></li>
+            </ul>
+          </nav>
+          <div class="nav-button">
+            <button type="button">Buy now ></button>
           </div>
         </div>
-      </div>
-      <div class="hero-right">
-        <div class="cafes">
-          <h1>16</h1>
-          <p>cafes</p>
+        <div class="hero-banner">
+          <div class="hero-left">
+            <h1 class="ice-cream">
+              ICE CREAM MADE WITH <span>PASSION</span>
+            </h1>
+            <div class="hero-button">
+              <button type="button">Products</button><button type="button">How it's made?</button>
+            </div>
+            <div class="milk">
+              <img src="images/slider-pic5.png" alt="bio-milk" />
+              <div class="milk-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+              </div>
+            </div>
+          </div>
+          <ul class="hero-right">
+            <li>
+              <div class="cafes">
+                <h2>16</h2>
+                <p>cafes</p>
+              </div>
+            </li>
+            <li>
+              <div class="foodtrucks">
+                <h2>23</h2>
+                <p>food trucks</p>
+              </div>
+            </li> 
+          </ul>
         </div>
-        <div class="foodtrucks">
-          <h1>23</h1>
-          <p>food trucks</p>
-        </div>
-        <div class="tasty">
-          <img src="images/slider-pic4.png" alt="so-tasty" />
-        </div>
-      </div>
-      <div class="cone">
-        <img src="images/slider-pic7.png" alt="cone-flavors" />
+        
       </div>
     </div>
   </header>
   <main>
-    <section class="products">
+    <section class="container">
+      <section class="products">
       <p>100% natural</p>
       <h2>Products</h2>
       <ul class="products-list">
@@ -91,7 +94,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et
           </p>
-          <img src="images/arrow-right.png" alt="arrow" width="40">
+            <img src="images/arrow-right.png" alt="arrow" width="40">
         </li>
         <li class="products-item">
           <h3>MILKSHAKES</h3>
@@ -106,6 +109,8 @@
         </li>
       </ul>
     </section>
+    </section>
+    
 
     <section class="tradition_and_love">
       <h3>tradition and love</h3>
