--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <button type="button">Products</button><button type="button">How it's made?</button>
             </div>
             <div class="milk">
-              <img src="images/slider-pic5.png" alt="bio-milk" />
+              <img src="images/milk-1.png" alt="bio-milk" />
               <div class="milk-text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
               </div>
