--- a/index.html
+++ b/index.html
@@ -1,149 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
 
     <title>IceCream Factory</title>
   </head>
 
   <body>
-<!-- Inicio sescciones equipo 1 -->
-  <header>
-    <div class="container">
-      <div class="hero">
-        <div class="home-container">
-          <svg class="Logo" width="199" height="50">
-            <use xlink:href="./images/icons.svg#icon-Logo"></use>
-          </svg>
-          <nav>
-            <ul>
-              <li><a class="nav-home" href="#">Home</a></li>
-              <li><a class="nav-home" href="#">About us</a></li>
-              <li><a class="nav-home" href="#">How it's made?</a></li>
-              <li><a class="nav-home" href="#">Our products</a></li>
-              <li><a class="nav-home" href="#">Contact</a></li>
+    <!-- Inicio sescciones equipo 1 -->
+    <header>
+      <div class="container">
+        <div class="hero">
+          <div class="home-container">
+            <svg class="Logo" width="199" height="50">
+              <use xlink:href="./images/icons.svg#icon-Logo"></use>
+            </svg>
+            <nav>
+              <ul>
+                <li><a class="nav-home" href="#">Home</a></li>
+                <li><a class="nav-home" href="#">About us</a></li>
+                <li><a class="nav-home" href="#">How it's made?</a></li>
+                <li><a class="nav-home" href="#">Our products</a></li>
+                <li><a class="nav-home" href="#">Contact</a></li>
+              </ul>
+            </nav>
+            <div class="nav-button">
+              <button type="button">Buy now ></button>
+            </div>
+          </div>
+          <div class="hero-banner">
+            <div class="hero-left">
+              <h1 class="ice-cream">
+                ICE CREAM MADE WITH <span>PASSION</span>
+              </h1>
+              <div class="hero-button">
+                <button type="button">Products</button
+                ><button type="button">How it's made?</button>
+              </div>
+              <div class="milk">
+                <img src="images/milk-1.png" alt="bio-milk" />
+                <div class="milk-text">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et
+                  </p>
+                </div>
+              </div>
+            </div>
+            <ul class="hero-right">
+              <li>
+                <div class="cafes">
+                  <svg width="30" height="30">
+                    <use
+                      xlink:href="./images/icons.svg#icon-Ellipse-banner"
+                    ></use>
+                  </svg>
+                  <h2>16</h2>
+                  <p>cafes</p>
+                </div>
+              </li>
+              <li>
+                <div class="foodtrucks">
+                  <svg width="30" height="30">
+                    <use
+                      xlink:href="./images/icons.svg#icon-Ellipse-banner"
+                    ></use>
+                  </svg>
+                  <h2>23</h2>
+                  <p>food trucks</p>
+                </div>
+              </li>
             </ul>
-          </nav>
-          <div class="nav-button">
-            <button type="button">Buy now ></button>
           </div>
         </div>
-        <div class="hero-banner">
-          <div class="hero-left">
-            <h1 class="ice-cream">
-              ICE CREAM MADE WITH <span>PASSION</span>
-            </h1>
-            <div class="hero-button">
-              <button type="button">Products</button><button type="button">How it's made?</button>
-            </div>
-            <div class="milk">
-              <img src="images/milk-1.png" alt="bio-milk" />
-              <div class="milk-text">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-              </div>
-            </div>
-          </div>
-          <ul class="hero-right">
-            <li>
-              <div class="cafes">
-                <h2>16</h2>
-                <p>cafes</p>
-              </div>
-            </li>
-            <li>
-              <div class="foodtrucks">
-                <h2>23</h2>
-                <p>food trucks</p>
-              </div>
-            </li> 
-          </ul>
-        </div>
-        
       </div>
-    </div>
-  </header>
-  <main>
-    <section class="container">
-      <section class="products">
-      <p>100% natural</p>
-      <h2>Products</h2>
-      <ul class="products-list">
-        <li class="products-item">
-          <h3>ICE CREAM</h3>
-          <svg class="products-point" width="24.84" height="6">
-            <use xlink:href="./images/icons.svg#icon-White-points"></use>
-          </svg>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et
-          </p>
-          <img src="images/arrow-right.png" alt="arrow" width="40">
-        </li>
-        <li class="products-item">
-          <h3>ICE COFFEE</h3>
-          <svg class="products-point" width="24.84" height="6">
-            <use xlink:href="./images/icons.svg#icon-White-points"></use>
-          </svg>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et
-          </p>
-            <img src="images/arrow-right.png" alt="arrow" width="40">
-        </li>
-        <li class="products-item">
-          <h3>MILKSHAKES</h3>
-          <svg class="products-point" width="24.84" height="6">
-            <use xlink:href="./images/icons.svg#icon-White-points"></use>
-          </svg>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et
-          </p>
-          <img src="images/arrow-right.png" alt="arrow" width="40">
-        </li>
-      </ul>
-    </section>
-    </section>
-    
-
-    <section class="tradition_and_love">
-      <h3>tradition and love</h3>
-      <h2>how it’s made?</h2>
-      <img src="images/img-tradition-and-love.png" alt="Image Tradition and Love">
-      <div class="text">
-        <p class="text_one">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
-
-        <p class="text_two">
-          Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
-          Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
-          suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
-          tincidu
-        </p>
-
-        <p>Aliquam erat volutpat. Aenean accumsan.</p>
-          <button type="button">Read more</button>
-        </div>
-
-        <div>
-          <h2>721</h2>
-          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-          <h2>16kg</h2>
-          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-          <h2>84</h2>
-          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-        </div>
+    </header>
+    <main>
+      <section class="container">
+        <section class="products">
+          <p>100% natural</p>
+          <h2>Products</h2>
+          <ul class="products-list">
+            <li class="products-item">
+              <h3>ICE CREAM</h3>
+              <svg class="products-point" width="26" height="6">
+                <use
+                  xlink:href="./images/icons.svg#icon-Ellipse-products"
+                ></use>
+              </svg>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et
+              </p>
+              <img src="images/arrow-right.png" alt="arrow" width="40" />
+            </li>
+            <li class="products-item">
+              <h3>ICE COFFEE</h3>
+              <svg class="products-point" width="26" height="6">
+                <use
+                  xlink:href="./images/icons.svg#icon-Ellipse-products"
+                ></use>
+              </svg>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et
+              </p>
+              <img src="images/arrow-right.png" alt="arrow" width="40" />
+            </li>
+            <li class="products-item">
+              <h3>MILKSHAKES</h3>
+              <svg class="products-point" width="26" height="6">
+                <use
+                  xlink:href="./images/icons.svg#icon-Ellipse-products"
+                ></use>
+              </svg>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et
+              </p>
+              <img src="images/arrow-right.png" alt="arrow" width="40" />
+            </li>
+          </ul>
+        </section>
       </section>
+    </main>
 
-<!-- Fin sescciones equipo 1 -->
+    <!-- Fin sescciones equipo 1 -->
 
-<!-- Inicio sescciones equipo 2 -->
-    <section class="tradition_and_love">
+    <!-- Inicio sescciones equipo 2 -->
+    <!--<section class="tradition_and_love">
       <div class="title">
         <h3 class="main-title">TRADITION AND LOVE</h3>
         <h2 class="second-title">HOW IT'S MADE?</h2>
@@ -151,7 +142,8 @@
       <div class="imag-y-text">
         <img
           src="images/img-tradition-and-love.png"
-          alt="Image Tradition and Love">
+          alt="Image Tradition and Love"
+        />
 
         <div class="paragraph">
           <p class="paragraph__one">
@@ -199,30 +191,30 @@
     <section class="gallery">
       <div class="colash">
         <div>
-          <img src="images/home-pic5.png" alt="glass of ice cream">
+          <img src="images/home-pic5.png" alt="glass of ice cream" />
         </div>
         <div>
-          <img src="images/home-pic4.png" alt="ice crean cone">
-          <img src="images/home-pic6.png" alt="palette">
-        </div>
-
-        <div>
-          <img src="images/home-pic1.png" alt="waffle cone">
-          <img src="images/home-pic7.png" alt="enjoying the ice cream">
+          <img src="images/home-pic4.png" alt="ice crean cone" />
+          <img src="images/home-pic6.png" alt="palette" />
         </div>
 
         <div>
-          <img src="images/home-pic9.png" alt="fruit salad">
-          <img src="images/home-pic8.png" alt="ice cream spark">
+          <img src="images/home-pic1.png" alt="waffle cone" />
+          <img src="images/home-pic7.png" alt="enjoying the ice cream" />
         </div>
 
         <div>
-          <img src="images/home-pic10.png" alt="pet ice cream">
-          <img src="images/home-pic12.png" alt="milk shake">
+          <img src="images/home-pic9.png" alt="fruit salad" />
+          <img src="images/home-pic8.png" alt="ice cream spark" />
         </div>
 
         <div>
-          <img src="images/home-pic11.png" alt="milkshake with ice cream">
+          <img src="images/home-pic10.png" alt="pet ice cream" />
+          <img src="images/home-pic12.png" alt="milk shake" />
+        </div>
+
+        <div>
+          <img src="images/home-pic11.png" alt="milkshake with ice cream" />
         </div>
       </div>
 
@@ -242,11 +234,11 @@
         <h3 class="testimony__name">Emily, Los Angeles</h3>
       </div>
     </section>
-<!-- Fin sescciones equipo 2 -->
+    -->
+    <!-- Fin sescciones equipo 2 -->
 
-<!-- Inicio sescciones equipo 3 -->
+    <!-- Inicio sescciones equipo 3 -->
 
-<!-- Fin sescciones equipo 3 -->
-
+    <!-- Fin sescciones equipo 3 -->
   </body>
 </html>
