--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
 
     <title>IceCream Factory</title>
   </head>
@@ -16,7 +16,7 @@
     <header>
       <div class="home-container">
         <div class="home">
-          <img src="logotipo" alt="logo">
+          <img src="logotipo" alt="logo" />
         </div>
         <nav>
           <ul>
@@ -45,7 +45,7 @@
         <p>food trucks</p>
       </div>
       <div class="milk"></div>
-      <img src="" alt="bio-milk">
+      <img src="alt="bio-milk">
       <p>
         Lorem ipsum dolor sit amet consectetur adipiscing elit torquent,
         ullamcorper mus egestas donec inceptos orci vitae cubilia, penatibus
@@ -53,12 +53,8 @@
         accumsan neque varius laoreet
       </p>
       <span class="icon-arrow-right2"></span>
-      <div class="cone">
-        <img src="" alt="cone-flavors">
-      </div>
-      <div class="tasty">
-        <img src="" alt="so-tasty">
-      </div>
+      <div class="cone"><img src=" alt="cone-flavors"></div>
+      <div class="tasty"><img src="alt="so-tasty"></div>
     </header>
     <section class="products">
       <h1><span>100% natural</span> Products</h1>
@@ -95,7 +91,8 @@
       <div class="imag-y-text">
         <img
           src="images/img-tradition-and-love.png"
-          alt="Image Tradition and Love">
+          alt="Image Tradition and Love"
+        />
 
         <div class="paragraph">
           <p class="paragraph__one">
@@ -119,7 +116,12 @@
 
       <div class="second-main">
         <div class="second-main__elements">
-          <svg></svg>
+          <svg class="second-main_svg">
+            <use
+              xlink:href="./images/icons.svg#icon-Milk
+            "
+            ></use>
+          </svg>
           <h2 class="second-main__title">721</h2>
           <p class="second-main__text">
             Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
@@ -127,15 +129,29 @@
         </div>
 
         <div class="second-main__elements">
-          <svg></svg>
+          <svg class="second-main_svg2">
+            <use
+              xlink:href="./images/icons.svg#icon-Apples
+            "
+            ></use>
+          </svg>
           <h2>16kg</h2>
-          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+          <p class="second-main__text">
+            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+          </p>
         </div>
 
         <div class="second-main__elements">
-          <svg></svg>
+          <svg class="second-main_svg3">
+            <use
+              xlink:href="./images/icons.svg#icon-Heart
+            "
+            ></use>
+          </svg>
           <h2>84</h2>
-          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+          <p class="second-main__text">
+            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+          </p>
         </div>
       </div>
     </section>
@@ -143,30 +159,30 @@
     <section class="gallery">
       <div class="colash">
         <div>
-          <img src="images/home-pic5.png" alt="glass of ice cream">
+          <img src="images/home-pic5.png" alt="glass of ice cream" />
         </div>
         <div>
-          <img src="images/home-pic4.png" alt="ice crean cone">
-          <img src="images/home-pic6.png" alt="palette">
-        </div>
-
-        <div>
-          <img src="images/home-pic1.png" alt="waffle cone">
-          <img src="images/home-pic7.png" alt="enjoying the ice cream">
+          <img src="images/home-pic4.png" alt="ice crean cone" />
+          <img src="images/home-pic6.png" alt="palette" />
         </div>
 
         <div>
-          <img src="images/home-pic9.png" alt="fruit salad">
-          <img src="images/home-pic8.png" alt="ice cream spark">
+          <img src="images/home-pic1.png" alt="waffle cone" />
+          <img src="images/home-pic7.png" alt="enjoying the ice cream" />
         </div>
 
-        <div>
-          <img src="images/home-pic10.png" alt="pet ice cream">
-          <img src="images/home-pic12.png" alt="milk shake">
+        <div class="colash_4">
+          <img src="images/home-pic9.png" alt="fruit salad" />
+          <img src="images/home-pic8.png" alt="ice cream spark" />
         </div>
 
-        <div>
-          <img src="images/home-pic11.png" alt="milkshake with ice cream">
+        <div class="colash_5">
+          <img src="images/home-pic10.png" alt="pet ice cream" />
+          <img src="images/home-pic12.png" alt="milk shake" />
+        </div>
+
+        <div class="colash_6">
+          <img src="images/home-pic11.png" alt="milkshake with ice cream" />
         </div>
       </div>
 
@@ -177,13 +193,32 @@
           alt="client's profile"
         />
         <div class="testimony__background">
+          <svg class="testimony__quotation">
+            <use
+              xlink:href="./images/icons.svg#icon-Quotation
+            "
+            ></use>
+          </svg>
           <p class="testimony__paragraph">
             Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-            ipsum primis in nibh vel risus.
+            Aliquam sem. In hendrerit <br />
+            nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel
+            risus.
           </p>
         </div>
+        <svg class="vignettes" width="32" height="4">
+          <use
+            xlink:href="./images/icons.svg#icon-Red-points
+          "
+          ></use>
+        </svg>
         <h3 class="testimony__name">Emily, Los Angeles</h3>
+        <svg class="vignettes" width="72" height="12">
+          <use
+            xlink:href="./images/icons.svg#icon-house-ellipses
+          "
+          ></use>
+        </svg>
       </div>
     </section>
   </body>
