nav buttom modified

--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
                 <li><a class="nav-home" href="#">Contact</a></li>
               </ul>
             </nav>
-            <div class="nav-button">
-              <button type="button">Buy now ></button>
-            </div>
+
+            <button class="nav-button" type="button">
+              Buy now<svg width="6" height="10">
+                <use xlink:href="./images/icons.svg#icon-array-button"></use>
+              </svg>
+            </button>
           </div>
           <div class="hero-banner">
             <div class="hero-left">
