--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
               <use xlink:href="./images/icons.svg#icon-Logo"></use>
             </svg>
             <nav>
+              <input type="checkbox" id="cones-menu" />
+              <label for="cones-menu" class="menu">
+                <img src="./images/Burger.svg" alt="menu" />
+              </label>
               <ul>
                 <li><a class="nav-home" href="#">Home</a></li>
                 <li><a class="nav-home" href="#">About us</a></li>
