--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
       </div>
       <div class="imag-y-text">
         <img
+          class="image_tradition"
           src="images/img-tradition-and-love.png"
           alt="Image Tradition and Love"
         />
@@ -112,7 +113,7 @@
 
           <button class="" type="button">
             <div class="content__button">
-              <span class="">Read more</span>
+              <span class="">Read more > </span>
               <svg class="">
                 <use xlink:href=""></use>
               </svg>
@@ -166,30 +167,54 @@
     <section class="gallery">
       <div class="colash">
         <div>
-          <img src="images/home-pic5.png" alt="glass of ice cream" />
+          <img
+            class="image_min"
+            src="images/home-pic5.png"
+            alt="glass of ice cream"
+          />
         </div>
         <div>
-          <img src="images/home-pic4.png" alt="ice crean cone" />
-          <img class="colash_min" src="images/home-pic6.png" alt="palette" />
+          <img
+            class="image_min"
+            src="images/home-pic4.png"
+            alt="ice crean cone"
+          />
+          <img class="image_min" src="images/home-pic6.png" alt="palette" />
         </div>
 
         <div>
-          <img src="images/home-pic1.png" alt="waffle cone" />
-          <img src="images/home-pic7.png" alt="enjoying the ice cream" />
+          <img class="image_max" src="images/home-pic1.png" alt="waffle cone" />
+          <img
+            class="image_min"
+            src="images/home-pic7.png"
+            alt="enjoying the ice cream"
+          />
         </div>
 
         <div class="colash_4">
-          <img src="images/home-pic9.png" alt="fruit salad" />
-          <img src="images/home-pic8.png" alt="ice cream spark" />
+          <img class="image_min" src="images/home-pic9.png" alt="fruit salad" />
+          <img
+            class="image_min"
+            src="images/home-pic8.png"
+            alt="ice cream spark"
+          />
         </div>
 
         <div class="colash_5">
-          <img src="images/home-pic10.png" alt="pet ice cream" />
-          <img src="images/home-pic12.png" alt="milk shake" />
+          <img
+            class="image_min"
+            src="images/home-pic10.png"
+            alt="pet ice cream"
+          />
+          <img class="image_min" src="images/home-pic12.png" alt="milk shake" />
         </div>
 
         <div class="colash_6">
-          <img src="images/home-pic11.png" alt="milkshake with ice cream" />
+          <img
+            class="image_min"
+            src="images/home-pic11.png"
+            alt="milkshake with ice cream"
+          />
         </div>
       </div>
 
@@ -206,14 +231,13 @@
             "
             ></use>
           </svg>
-          <p class="testimony__paragraph">
-            Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-            Aliquam sem. In hendrerit
-          </p>
-          <p class="testimony__paragraph">
-            nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel
-            risus.
-          </p>
+          <div class="container_paragraph">
+            <span class="testimony__paragraph">
+              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+              Aliquam sem. In hendrerit quam nunc, accumsan congue. Lorem ipsum
+              primis in nibh vel risus.
+            </span>
+          </div>
         </div>
         <svg class="vignettes" width="32" height="4">
           <use
