--- a/index.html
+++ b/index.html
@@ -111,12 +111,9 @@
 
           <p class="paragraph__two">Aliquam erat volutpat. Aenean accumsan.</p>
 
-          <button class="" type="button">
+          <button class="buttom-right">
             <div class="content__button">
-              <span class="">Read more > </span>
-              <svg class="">
-                <use xlink:href=""></use>
-              </svg>
+              <span class="button-text">Read More</span>
             </div>
           </button>
         </div>
