--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <!-- Inicio sescciones equipo 1 -->
-    <header>
+    <!--<header>
       <div class="container">
         <div class="hero">
           <div class="home-container">
@@ -88,7 +88,7 @@
           </div>
         </div>
       </div>
-    </header>
+    </header>-->
     <main>
       <section class="container">
         <section class="products">
