images products scaled

--- a/index.html
+++ b/index.html
@@ -24,89 +24,70 @@
   <body>
     <!-- Inicio sescciones equipo 1 -->
     <header>
-      <div class="container">
-        <div class="hero">
-          <div class="home-container" id="menu-1">
-            <svg class="Logo" width="199" height="50">
-              <use xlink:href="./images/icons.svg#icon-Logo"></use>
-            </svg>
-            <nav>
-              <ul>
-                <li><a class="nav-home" href="#menu-1">Home</a></li>
-                <li><a class="nav-home" href="#menu-2">About us</a></li>
-                <li><a class="nav-home" href="#menu-3">How it's made?</a></li>
-                <li><a class="nav-home" href="#menu-4">Our products</a></li>
-                <li><a class="nav-home" href="#menu-5">Contact</a></li>
-              </ul>
-            </nav>
-            <button class="nav-button" type="button">
-              Buy now
-              <svg width="6" height="10">
-                <use xlink:href="./images/icons.svg#icon-array-button"></use>
-              </svg>
-            </button>
-          </div>
-          <div class="hero-banner">
-            <div class="hero-left">
-              <h1 class="ice-cream">
-                ICE CREAM MADE WITH <span>PASSION</span>
-              </h1>
-              <div class="hero-button">
-                <button type="button">Products</button
-                ><button type="button">How it's made?</button>
-              </div>
-              <div class="milk">
-                <img src="images/milk-1.png" alt="bio-milk" />
-                <div class="milk-text">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et
-                  </p>
+        <div class="container">
+                <div class="hero">
+                    <div class="home-container" id="menu-1">
+                        <svg class="Logo" width="199" height="50">
+                        <use xlink:href="./images/icons.svg#icon-Logo"></use>
+                        </svg>
+                        <nav>
+                        <ul>
+                            <li><a class="nav-home" href="#menu-1">Home</a></li>
+                            <li><a class="nav-home" href="#menu-2">About us</a></li>
+                            <li><a class="nav-home" href="#menu-3">How it's made?</a></li>
+                            <li><a class="nav-home" href="#menu-4">Our products</a></li>
+                            <li><a class="nav-home" href="#menu-5">Contact</a></li>
+                        </ul>
+                        </nav>
+                        <button class="nav-button" type="button">
+                            Buy now
+                            <svg width="6" height="10">
+                            <use xlink:href="./images/icons.svg#icon-array-button"></use>
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="hero-banner">
+                        <div class="hero-left">
+                        <h1 class="ice-cream">
+                            ICE CREAM MADE WITH <span>PASSION</span>
+                        </h1>
+                        <div class="hero-button">
+                            <button type="button">Products</button
+                            ><button type="button">How it's made?</button>
+                        </div>
+                        <div class="milk">
+                            <img src="images/milk-1.png" alt="bio-milk" />
+                            <div class="milk-text">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                do eiusmod tempor incididunt ut labore et
+                            </p>
+                            </div>
+                        </div>
+                        </div>
+                        <ul class="hero-right">
+                        <li>
+                            <div class="cafes">
+                                <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle cx="15" cy="15" r="15" fill="white"/>
+                                </svg>
+                                <h2>16</h2>
+                            <p>cafes</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="foodtrucks">
+                                <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle cx="15" cy="15" r="15" fill="white"/>
+                                </svg>
+                            <h2>23</h2>
+                            <p>food trucks</p>
+                            </div>
+                        </li>
+                        </ul>
+                    </div>
                 </div>
-              </div>
-            </div>
-            <ul class="hero-right">
-              <li>
-                <div class="cafes">
-                  <svg
-                    width="30"
-                    height="30"
-                    viewBox="0 0 30 30"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <circle cx="15" cy="15" r="15" fill="white" />
-                  </svg>
-                  <h2>16</h2>
-                  <p>cafes</p>
-                </div>
-              </li>
-              <li>
-                <div class="foodtrucks">
-                  <svg
-                    width="30"
-                    height="30"
-                    viewBox="0 0 30 30"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <circle cx="15" cy="15" r="15" fill="white" />
-                  </svg>
-                  <h2>23</h2>
-                  <p>food trucks</p>
-                </div>
-              </li>
-            </ul>
-            <label for="" class="close-menu">
-              <img src="./images/close.svg" alt="close" />
-            </label>
-          </nav>
-
-          <div class="nav-button">
-            <button type="button">Buy now ></button>
-          </div>
         </div>
-      </div>
     </header>
 
     <main>
