--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <include src="./partials/products.html"></include>
+    <include src="./partials/Advantages.html"></include>
+    <include src="./partials/gallery.html"></include>
     <include src="./partials/contacts.html"></include>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
