edit litle bugs in two work

--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -11,7 +11,7 @@
 <body>
   <p><a href="index.html">Go back</a></p>
   <div class="item">
-    <input type="text" id="datetime-picker" placeholder="input date" />
+    <input type="text" id="datetime-picker" placeholder="select a date" />
     <button type="button" data-start>Start</button>
   </div>
 
