--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 9</title>
-    <link rel="stylesheet" href="css/common.css" />
+    <title>Модуль 10</title>
   </head>
   <body>
     <ul>
-      <li><a href="01-color-switcher.html">Color switcher</a></li>
-      <li><a href="02-timer.html">Countdown timer</a></li>
-      <li><a href="03-promises.html">Promise generator</a></li>
+      <li><a href="01-timeout.html">window.setTimeout()</a></li>
+      <li><a href="02-interval.html">window.setInterval()</a></li>
+      <li><a href="03-notification.html">Мастерская: оповещение</a></li>
+      <li><a href="04-subscription.html">Мастерская: промпт подписки</a></li>
+      <li><a href="05-date.html">Дата и время</a></li>
+      <li><a href="06-timer.html">Мастерская: таймер</a></li>
     </ul>
+
+    <script src="index.js"></script>
   </body>
 </html>
