home page skeleton and library plus partials

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="pl-PL">    
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="the best site to search for popular movies"
+    />
+    <meta
+      name="keywords"
+      content="movie, movies, film, genres, popularity movies"     
+    />
+    <meta name="robots" content="index,follow" />
     <title>Filmoteka</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <!-- favicon <link rel="" href="" type="" /> -->
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <header>
+      <include src="./partials/header-home.html"></include>
+    </header>
+    <main>
+      <include src="./partials/cards-home.html"></include>
+    <include src="./partials/pagination.html"></include>
+    </main>
+    <footer>
+      <include src="./partials/footer.html"></include>
+    </footer>
+    <include src="./partials/modal-log-in.html"></include>
+    <include src="./partials/modal-card.html"></include>
+    <include src="./partials/modal-students.html"></include>
+    <script type="module" src="./index.js"></script>
+    <!-- <include src="./partials/theme.html"></include> -->
   </body>
 </html>
