--- a/src/02-video.html
+++ b/src/02-video.html
@@ -7,6 +7,7 @@
     <title>Video playback</title>
     <link rel="stylesheet" href="css/common.css" />
   </head>
+  <script src="https://player.vimeo.com/api/player.js"></script>
   <body>
     <p><a href="index.html">Go back</a></p>
 
