--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <include src="./partials/sectiune-1.html"></include>
     <include src="./partials/example.html"></include>
+    <include src="./partials/sectiune-2.html"></include>
   </body>
 </html>
