--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <include src="./partials/section_test.html"></include>
     <include src="./partials/example.html"></include>
+    <include src="./partials/section_test.html"></include>
   </body>
 </html>
