--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
     <include src="./partials/section_test.html"></include>
     <include src="./partials/example.html"></include>
     <include src="./partials/section_test.html"></include>
+    <include src="./partials/section_test.html"></include>
   </body>
 </html>
