--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+   <!-- <include src="./partials/example.html"></include> -->
     <include src="./partials/first.html"></include>
   </body>
 </html>
