--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="../node_modules/modern-normalize/modern-normalize.css"
     />
-    <script type="module" src="./index.js"></script>
+    <!-- <script type="module" src="./index.js"></script> -->
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
@@ -24,5 +24,6 @@
     <include src="./partials/howitsmade.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/footer.html"></include>
+    <script src="./index.js"></script>
   </body>
 </html>
