add-partial-folders

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/sectiune-1.html"></include>
-    <include src="./partials/example.html"></include>
-    <include src="./partials/sectiune-2.html"></include>
+    <include src="./partials/about-section.html"></include>
+    <include src="./partials/hero-header-section.html"></include>
+    <include src="./partials/products-section.html"></include>
   </body>
 </html>
