--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
+    <link rel="stylesheet" href="./css/index.min.css" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
    <!-- <include src="./partials/example.html"></include> -->
-    <include src="./partials/first.html"></include>
-    <include src="./partials/about_x.html"></include>
+    <!-- <include src="./partials/first.html"></include>
+    <include src="./partials/about_x.html"></include> -->
+    <include src="./partials/about-advantages.html"></include>
   </body>
 </html>
