--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,10 @@
     <include src="./partials/about-section.html"></include>
     <include src="./partials/hero-header-section.html"></include>
     <include src="./partials/products-section.html"></include>
+    <header>
+      <div>
+        <p>Test</p>
+      </div>
+    </header>
   </body>
 </html>
