--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,16 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
     <include src="./partials/header.html"></include>
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/products.html"></include>
+    <include src="./partials/about-how-its-made.html"></include>
+    <include src="./partials/advantages.html"></include>
+    <include src="./partials/gallery.html"></include>
+    <include src="./partials/customer-reviews.html"></include>
+    <include src="./partials/contacts-locations.html"></include>
+    <include src="./partials/footer.html"></include>
+    <include src="./partials/example.html"></include>
+
   </body>
 </html>
