update dev branch

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,12 +12,5 @@
     <include src="./partials/about-section.html"></include>
     <include src="./partials/hero-header-section.html"></include>
     <include src="./partials/products-section.html"></include>
-
-    <header>
-      <div>
-      </div>
-
-    <h2 class="test-title">Products-section-test</h2>
-
   </body>
 </html>
