--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
-  </head>
-  <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/about-section.html"></include>
-    <include src="./partials/hero-header-section.html"></include>
-    <include src="./partials/products-section.html"></include>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="stylesheet" href="./sass/index.scss" />
+  <script type="module" src="./index.js"></script>
+  <title>Ice Cream</title>
+</head>
+<body>
+  <!-- ❗️❗️❗️ Add partials like so for every page -->
+  <include src="./partials/hero-header-section.html"></include>
+  <include src="./partials/products-section.html"></include>
+  <include src="./partials/about-section.html"></include>
+  <include src="./partials/advantages-section.html"></include>
+  <include src="./partials/gallery-section.html"></include>
+  <include src="./partials/customer-rev-section.html"></include>
+  <include src="./partials/contacts-section.html"></include>
+  <include src="./partials/footer-section.html"></include>
+</body>
+
 </html>
