footer-first-commit

--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,48 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
+    <div class="modal is-hidden" data-modal>
+      <div class="inner-div">
+        <h3 class="modal__title">
+          Leave your details and maybe we will call you back
+        </h3>
+        <button data-modal-close class="modal__button">
+          <svg height="11px" height="11px">
+            <use href="/src/images/icons-footer.svg#icon-close"></use>
+          </svg>
+        </button>
+        <form class="form" name="contact-form">
+          <label class="form__items">
+            Name
+            <input class="form__input" type="text" name="name" />
+          </label>
+          <label class="form__items">
+            Number
+            <input class="form__input" type="tel" name="telephone" />
+          </label>
+          <label class="form__items">
+            E-mail
+            <input class="form__input" type="mail" name="mail" />
+          </label>
+          <label class="form__items">
+            a few words, my darling
+            <textarea
+              class="form__text-area"
+              placeholder="Write here..."
+              name="comments"
+            ></textarea>
+          </label>
+          <label class="form__items-terms"> </label>
+          <button class="button-footer" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/howitsmade.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/footer.html"></include>
+    <script src="/src/index.js"></script>
   </body>
 </html>
