--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,10 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-   <!-- <include src="./partials/example.html"></include> -->
+    <!-- <include src="./partials/example.html"></include> -->
     <!-- <include src="./partials/first.html"></include>
     <include src="./partials/about_x.html"></include> -->
+    <include src="./partials/products.html"></include>
     <include src="./partials/about-advantages.html"></include>
   </body>
 </html>
