--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="../node_modules/modern-normalize/modern-normalize.css"
     />
-    <script type="module" src="./index.js"></script>
+    <!--  <script type="module" src="./index.js"></script>-->
   </head>
   <body>
     <div class="modal is-hidden" data-modal>
@@ -24,7 +24,7 @@
           Leave your details and maybe we will call you back
         </h3>
         <button data-modal-close class="modal__button">
-          <svg height="11px" height="11px">
+          <svg class="modal__svg" height="20px" height="20px">
             <use href="/src/images/icons-footer.svg#icon-close"></use>
           </svg>
         </button>
@@ -54,6 +54,43 @@
         </form>
       </div>
     </div>
+    <div class="modal-2 is-hidden-2">
+      <div class="inner-div-2">
+        <button data-modal-close-2 class="modal-2-button">
+          <svg class="modal__svg" height="20px" height="20px">
+            <use href="/src/images/icons-footer.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal__title-2">We will be glad to see you</p>
+        <div class="modal-2-container">
+          <iframe
+            class="modal-maps"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2541.8661565136995!2d30.53188965062755!3d50.424965296982236!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4d96f5139689b%3A0xa1f7c65300bebad1!2zR29JVDog0JrRg9GA0YHRiyDQv9GA0L7Qs9GA0LDQvNC80LjRgNC-0LLQsNC90LjRjyDQsiDQmtC40LXQstC1IHwgSVQg0JrRg9GA0YHRiw!5e0!3m2!1sro!2sro!4v1680813001416!5m2!1sro!2sro"
+            width="400"
+            height="300"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+        <p class="modal2-adress">
+          <svg class="location-svg" width="30px" height="60px">
+            <use href="/src/images/icons-footer.svg#location"></use>
+          </svg>
+          Yevhen Konovalets Street, 36, Kyiv, 02000
+        </p>
+        <button class="modalbutton-2">
+          <a
+            target="_blank"
+            href="https://www.google.com/maps/place/GoIT/@50.4249619,30.531895,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4d96f5139689b:0xa1f7c65300bebad1!8m2!3d50.4249597!4d30.5340916"
+            class="modal_btn-text"
+            >Open in Google Maps</a
+          >
+        </button>
+      </div>
+    </div>
+
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
     <include src="./partials/products.html"></include>
@@ -61,5 +98,6 @@
     <include src="./partials/gallery.html"></include>
     <include src="./partials/footer.html"></include>
     <script src="/src/index.js"></script>
+    <script src="/src/index-2.js"></script>
   </body>
 </html>
