--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,6 @@
     <include src="./partials/products.html"></include>
     <include src="./partials/about-advantages.html"></include>
     <script type="module" src="./index.js"></script>
+    <script src="./js/products.js"></script>
   </body>
 </html>
