update customer review

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
   <include src="./partials/customer-rev-section.html"></include>
   <include src="./partials/contacts-section.html"></include>
   <include src="./partials/footer-section.html"></include>
+
+<script src="./js/mobile-menu.js"></script>
+<script src="./js/swiper.js"></script>
 </body>
 
 </html>
