--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 <body>
   <!-- ❗️❗️❗️ Add partials like so for every page -->
   <include src="./partials/header.html"></include>
-  <include src="./partials/hero.html"></include>
+  <include src="./partials/hero-header.html"></include>
   <include src="./partials/products.html"></include>
   <include src="./partials/about-how-its-made.html"></include>
   <include src="./partials/advantages.html"></include>
@@ -24,7 +24,6 @@
   <include src="./partials/customer-reviews.html"></include>
   <include src="./partials/contacts-locations.html"></include>
   <include src="./partials/footer.html"></include>
-  <include src="./partials/example.html"></include>
 
 </body>
 
