--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
         </form>
       </div>
     </div>
-    <div class="modal-2 is-hidden-2">
+    <div data-modal-2 class="modal-2 is-hidden-2">
       <div class="inner-div-2">
         <button data-modal-close-2 class="modal-2-button">
           <svg class="modal__svg" height="20px" height="20px">
@@ -65,7 +65,7 @@
         <div class="modal-2-container">
           <iframe
             class="modal-maps"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2541.8661565136995!2d30.53188965062755!3d50.424965296982236!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4d96f5139689b%3A0xa1f7c65300bebad1!2zR29JVDog0JrRg9GA0YHRiyDQv9GA0L7Qs9GA0LDQvNC80LjRgNC-0LLQsNC90LjRjyDQsiDQmtC40LXQstC1IHwgSVQg0JrRg9GA0YHRiw!5e0!3m2!1sro!2sro!4v1680813001416!5m2!1sro!2sro"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2847.138608655672!2d26.083469150372697!3d44.47133150705823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b2021313897175%3A0x4bc1aad4cfb7d402!2sBetty%20Ice!5e0!3m2!1sro!2sro!4v1680903553136!5m2!1sro!2sro"
             width="400"
             height="300"
             style="border: 0"
@@ -83,7 +83,7 @@
         <button class="modalbutton-2">
           <a
             target="_blank"
-            href="https://www.google.com/maps/place/GoIT/@50.4249619,30.531895,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4d96f5139689b:0xa1f7c65300bebad1!8m2!3d50.4249597!4d30.5340916"
+            href="https://www.google.com/maps/place/Betty+Ice/@44.4713277,26.0856632,17z/data=!3m1!4b1!4m6!3m5!1s0x40b2021313897175:0x4bc1aad4cfb7d402!8m2!3d44.4713277!4d26.0856632!16s%2Fg%2F11cs18jx41"
             class="modal_btn-text"
             >Open in Google Maps</a
           >
