--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ice Cream</title>
+    <link rel="icon shortcut" type="image/png" href="./images/page-logo.png" />
     <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -25,5 +26,6 @@
     <include src="./partials/gallery.html"></include>
     <include src="./partials/footer.html"></include>
     <script src="./index.js"></script>
+    <script src="./modal.js"></script>
   </body>
 </html>
