--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,7 @@
   <script type="module" src="./index.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Titan+One&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Titan+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -24,7 +23,6 @@
   <include src="./partials/customer-reviews.html"></include>
   <include src="./partials/contacts-locations.html"></include>
   <include src="./partials/footer.html"></include>
-  <include src="./partials/example.html"></include>
 
 </body>
 
