--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="modal is-hidden" data-modal>
-      <div class="inner-div">
+      <div class="modal__inner container">
         <h3 class="modal__title">
           Leave your details and maybe we will call you back
         </h3>
@@ -55,16 +55,16 @@
       </div>
     </div>
     <div data-modal-2 class="modal-2 is-hidden-2">
-      <div class="inner-div-2">
-        <button data-modal-close-2 class="modal-2-button">
+      <div class="modal-2__inner container">
+        <button data-modal-close-2 class="modal-2__button-close">
           <svg class="modal__svg" height="20px" height="20px">
             <use href="/src/images/icons-footer.svg#icon-close"></use>
           </svg>
         </button>
-        <p class="modal__title-2">We will be glad to see you</p>
-        <div class="modal-2-container">
+        <p class="modal-2__title">We will be glad to see you</p>
+        <div class="modal-2__container">
           <iframe
-            class="modal-maps"
+            class="modal-2__maps"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2847.138608655672!2d26.083469150372697!3d44.47133150705823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b2021313897175%3A0x4bc1aad4cfb7d402!2sBetty%20Ice!5e0!3m2!1sro!2sro!4v1680903553136!5m2!1sro!2sro"
             width="400"
             height="300"
@@ -74,13 +74,13 @@
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
         </div>
-        <p class="modal2-adress">
-          <svg class="location-svg" width="30px" height="60px">
+        <p class="modal-2__adress">
+          <svg class="modal-2__location-svg" width="30px" height="60px">
             <use href="/src/images/icons-footer.svg#location"></use>
           </svg>
-          Yevhen Konovalets Street, 36, Kyiv, 02000
+          Bulevardul Aviatorilor 106, București 014192
         </p>
-        <button class="modalbutton-2">
+        <button class="modal-2__button">
           <a
             target="_blank"
             href="https://www.google.com/maps/place/Betty+Ice/@44.4713277,26.0856632,17z/data=!3m1!4b1!4m6!3m5!1s0x40b2021313897175:0x4bc1aad4cfb7d402!8m2!3d44.4713277!4d26.0856632!16s%2Fg%2F11cs18jx41"
