--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Titan+One&display=swap"
     rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="../src/images/hero-header/favicon.ico" />
+
 </head>
 
 <body>
