--- a/src/index.html
+++ b/src/index.html
@@ -27,5 +27,6 @@
     <include src="./partials/footer.html"></include>
     <script src="./index.js"></script>
     <script src="./modal.js"></script>
+    <script src="./readmore.js"></script>
   </body>
 </html>
