--- a/src/index.html
+++ b/src/index.html
@@ -34,16 +34,41 @@
         as its temperature increases.</p>
     </div>
   </div>
+  <!--Locations Modal-->
+  <div class="modal-locations is-hidden" data-modal>
+    <div class="modal-locations__inside">
+      <button class="modal-locations__button" data-modal-close>
+        <svg>
+          <use href="./images/icons-svg.svg#icon-x-altx-alt"></use>
+        </svg>
+      </button>
+
+      <div class="container-modal">
+        <svg class="container-modal__svg" fill="crimson">
+          <use href="./images/icons-svg.svg#icon-icecream"></use>
+        </svg>
+      </div>
+      <h2 class="modal-locations__title"> OUR LOCATIONS</h2>
+
+      <iframe class="frame-locations"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3105.6851669235175!2d1.4026918508752027!3d38.88544437947223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x129945cd5c67f891%3A0xbf31e71e9658c299!2sUshua%C3%AFa%20Ibiza!5e0!3m2!1sen!2sus!4v1680960232562!5m2!1sen!2sus"
+        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <form class="frame-locations__form" target="_blank"
+        action="https://www.google.com/maps/place/Ushua%C3%AFa+Ibiza/@38.8854444,1.4026919,17z/data=!3m1!4b1!4m6!3m5!1s0x129945cd5c67f891:0xbf31e71e9658c299!8m2!3d38.8854444!4d1.4048859!16s%2Fm%2F0lkntjz?">
+        <button class="frame-locations__button" type="submit">Open map</button>
+    </div>
+  </div>
   <main>
     <include src="./partials/header-hero.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/about-advantages.html"></include>
-    <include src="./partials/gallery.html"></include
+    <include src="./partials/gallery.html"></include>
     <include src="./partials/locations.html"></include>
     <include src="./partials/footer.html"></include>
   </main>
   <script src="./js/products.js"></script>
   <script src="./js/about-modal.js"></script>
+  <script src="./js/locationsModals.js"></script>
 </body>
 
 </html>
