gallery-last-part

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="../node_modules/modern-normalize/modern-normalize.css" />
-  <script type="module" src="./index.js"></script>
+
 </head>
 
 <body>
@@ -21,7 +21,7 @@
   <include src="./partials/howitsmade.html"></include>
   <include src="./partials/gallery.html"></include>
   <include src="./partials/footer.html"></include>
-
+  <script src='./slidesShow.js'></script>
 </body>
 
 </html>
